fixed FigaroDataViewer link alignment
added Triaged dataset job link for failed jobs

--- a/src/components/FigaroDataViewer/style.scss
+++ b/src/components/FigaroDataViewer/style.scss
@@ -29,6 +29,7 @@ a {
     cursor: pointer;
     text-decoration: underline;
     color: #0000ee;
+    padding: 0 7px;
   }
 
   &:hover {
